[REFACTOR] colors.xml 정리

--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -6,6 +6,6 @@
     android:useLevel="false" >
 
     <solid
-        android:color="@color/white" />
+        android:color="@color/general_theme_white" />
 
 </shape>
