--- a/app/src/main/res/layout/activity_find_pw.xml
+++ b/app/src/main/res/layout/activity_find_pw.xml
@@ -23,7 +23,7 @@
         android:fontFamily="@font/noto_sans_kr_bold"
         android:includeFontPadding="false"
         android:text="@string/find_id_or_pw2"
-        android:textColor="@color/black"
+        android:textColor="@color/general_theme_black"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,7 +38,7 @@
         android:fontFamily="@font/noto_sans_kr_regular"
         android:includeFontPadding="false"
         android:text="@string/insert_email"
-        android:textColor="@color/black"
+        android:textColor="@color/general_theme_black"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
