--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -28,7 +28,7 @@
             android:layout_marginBottom="30dp"
             android:fontFamily="@font/noto_sans_kr_bold"
             android:textSize="20sp"
-            android:textColor="@color/white"
+            android:textColor="@color/general_theme_white"
             android:text="@string/text_start"
             app:layout_constraintVertical_bias="0.75"
             app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +55,7 @@
            android:layout_marginBottom="118dp"
            android:paddingHorizontal="30dp"
            android:background="@drawable/bg_rectangle_round"
-           android:backgroundTint="@color/main_subwhite"
+           android:backgroundTint="@color/system_theme_subwhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >
@@ -66,7 +66,7 @@
                android:fontFamily="@font/noto_sans_kr_bold"
                android:includeFontPadding="false"
                android:textSize="12sp"
-               android:textColor="@color/main_theme_gray"
+               android:textColor="@color/system_theme_gray"
                android:text="@string/latest_result"
                app:layout_constraintVertical_bias="0.25"
                app:layout_constraintTop_toTopOf="parent"
@@ -80,7 +80,7 @@
                android:fontFamily="@font/noto_sans_kr_bold"
                android:includeFontPadding="false"
                android:textSize="16sp"
-               android:textColor="@color/black"
+               android:textColor="@color/general_theme_black"
                tools:text="부팅디스크(SSD) 접촉불량"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
@@ -93,7 +93,7 @@
                android:fontFamily="@font/noto_sans_kr_bold"
                android:includeFontPadding="false"
                android:textSize="12sp"
-               android:textColor="@color/main_theme_gray"
+               android:textColor="@color/system_theme_gray"
                tools:text="2023.04.16 00:00"
                app:layout_constraintVertical_bias="0.75"
                app:layout_constraintTop_toTopOf="parent"
@@ -104,7 +104,7 @@
                android:layout_width="7.5dp"
                android:layout_height="13dp"
                android:src="@drawable/ic_front"
-               app:tint="@color/main_theme_gray"
+               app:tint="@color/system_theme_gray"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
@@ -145,7 +145,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_setting"
-                android:background="@color/transparent"
+                android:background="@android:color/transparent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
 
