--- a/app/src/main/res/layout/activity_join_part3.xml
+++ b/app/src/main/res/layout/activity_join_part3.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/join_membership"
-        android:textColor="@color/black"
+        android:textColor="@color/general_theme_black"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,7 +48,7 @@
         android:layout_marginTop="131dp"
         android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/join_user_name"
-        android:textColor="@color/black"
+        android:textColor="@color/general_theme_black"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@id/imagebutton_back"
         app:layout_constraintTop_toBottomOf="@id/imagebutton_back" />
@@ -71,7 +71,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/overlap_nikname"
-        android:textColor="@color/general_theme_error"
+        android:textColor="@color/general_theme_red"
         android:textSize="12sp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@id/edittext_name"
@@ -83,7 +83,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/invalid_nikname"
-        android:textColor="@color/general_theme_error"
+        android:textColor="@color/general_theme_red"
         android:textSize="12sp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@id/edittext_name"
@@ -96,7 +96,7 @@
         android:layout_marginTop="43dp"
         android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/join_user_password"
-        android:textColor="@color/black"
+        android:textColor="@color/general_theme_black"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@id/textview_join_user_name"
         app:layout_constraintTop_toBottomOf="@id/edittext_name" />
@@ -121,7 +121,7 @@
         android:layout_marginTop="5dp"
         android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/password_rule"
-        android:textColor="@color/black"
+        android:textColor="@color/general_theme_black"
         android:textSize="12sp"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="@id/edittext_password"
@@ -146,7 +146,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/password_error"
-        android:textColor="@color/general_theme_error"
+        android:textColor="@color/general_theme_red"
         android:textSize="12sp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@id/edittext_password"
