--- a/app/src/main/res/layout/activity_problem_category.xml
+++ b/app/src/main/res/layout/activity_problem_category.xml
@@ -23,7 +23,7 @@
         android:includeFontPadding="false"
         android:text="@string/whatis_problem"
         android:textAlignment="center"
-        android:textColor="@color/white"
+        android:textColor="@color/general_theme_white"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@id/group_button"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,7 +49,7 @@
             android:layout_height="140dp"
             android:layout_margin="10dp"
             android:background="@drawable/bg_rectangle_round"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/general_theme_white"
             app:layout_constraintBottom_toTopOf="@id/button_use_prob"
             app:layout_constraintEnd_toStartOf="@id/button_display_prob"
             app:layout_constraintStart_toStartOf="parent"
@@ -72,7 +72,7 @@
                 android:fontFamily="@font/noto_sans_kr_medium"
                 android:includeFontPadding="false"
                 android:text="@string/prob_power"
-                android:textColor="@color/black"
+                android:textColor="@color/general_theme_black"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -88,7 +88,7 @@
             android:layout_height="140dp"
             android:layout_margin="10dp"
             android:background="@drawable/bg_rectangle_round"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/general_theme_white"
             app:layout_constraintBottom_toTopOf="@id/button_acc_prob"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/button_power_prob"
@@ -111,7 +111,7 @@
                 android:fontFamily="@font/noto_sans_kr_medium"
                 android:includeFontPadding="false"
                 android:text="@string/prob_display"
-                android:textColor="@color/black"
+                android:textColor="@color/general_theme_black"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -127,7 +127,7 @@
             android:layout_height="140dp"
             android:layout_margin="10dp"
             android:background="@drawable/bg_rectangle_round"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/general_theme_white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/button_acc_prob"
             app:layout_constraintStart_toStartOf="parent"
@@ -150,7 +150,7 @@
                 android:fontFamily="@font/noto_sans_kr_medium"
                 android:includeFontPadding="false"
                 android:text="@string/prob_use"
-                android:textColor="@color/black"
+                android:textColor="@color/general_theme_black"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -166,7 +166,7 @@
             android:layout_height="140dp"
             android:layout_margin="10dp"
             android:background="@drawable/bg_rectangle_round"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/general_theme_white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/button_use_prob"
@@ -189,7 +189,7 @@
                 android:fontFamily="@font/noto_sans_kr_medium"
                 android:includeFontPadding="false"
                 android:text="@string/prob_acc"
-                android:textColor="@color/black"
+                android:textColor="@color/general_theme_black"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -207,7 +207,7 @@
         android:includeFontPadding="false"
         android:text="@string/windows"
         android:textAlignment="center"
-        android:textColor="@color/main_theme_gray"
+        android:textColor="@color/system_theme_gray"
         android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@id/button_ask"
         app:layout_constraintEnd_toEndOf="parent"
@@ -221,7 +221,7 @@
         android:fontFamily="@font/noto_sans_kr_regular"
         android:includeFontPadding="false"
         android:text="@string/contact_ttukttak"
-        android:textColor="@color/white"
+        android:textColor="@color/general_theme_white"
         android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@id/button_ask"
         app:layout_constraintEnd_toEndOf="parent"
