--- a/app/src/main/res/layout/activity_solution.xml
+++ b/app/src/main/res/layout/activity_solution.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/noto_sans_kr_medium"
         android:includeFontPadding="false"
-        android:textColor="@color/main_theme_gray"
+        android:textColor="@color/system_theme_gray"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@id/subtitle"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/noto_sans_kr_regular"
         android:includeFontPadding="false"
-        android:textColor="@color/white"
+        android:textColor="@color/general_theme_white"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/button_back"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,7 +79,7 @@
                 android:fontFamily="@font/noto_sans_kr_medium"
                 android:includeFontPadding="false"
                 android:text="@string/solutions"
-                android:textColor="@color/white"
+                android:textColor="@color/general_theme_white"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -106,9 +106,9 @@
                     android:includeFontPadding="false"
                     android:padding="15dp"
                     android:textAlignment="textStart"
-                    android:textColor="@color/black"
+                    android:textColor="@color/general_theme_black"
                     android:textSize="14sp"
-                    app:backgroundTint="@color/main_subwhite"
+                    app:backgroundTint="@color/system_theme_subwhite"
                     tools:text="점검 사항 (1)\nsersfsdfasdfjlksjdlkfjsdssdkf" />
 
             </LinearLayout>
@@ -121,7 +121,7 @@
                 android:fontFamily="@font/noto_sans_kr_regular"
                 android:includeFontPadding="false"
                 android:text="@string/avail_problems"
-                android:textColor="@color/main_theme_gray"
+                android:textColor="@color/system_theme_gray"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toTopOf="@id/text_avail_problems"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -138,7 +138,7 @@
                 android:fontFamily="@font/noto_sans_kr_regular"
                 android:includeFontPadding="false"
                 android:textAlignment="center"
-                android:textColor="@color/white"
+                android:textColor="@color/general_theme_white"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toTopOf="@id/button_find_solution"
                 app:layout_constraintStart_toStartOf="parent"
@@ -157,7 +157,7 @@
                 android:text="@string/ask"
                 android:textColor="@color/main_theme_blue"
                 android:textSize="18sp"
-                app:backgroundTint="@color/white"
+                app:backgroundTint="@color/general_theme_white"
                 app:layout_constraintBottom_toTopOf="@id/button_complete"
                 app:layout_constraintStart_toStartOf="parent" />
 
@@ -170,9 +170,9 @@
                 android:includeFontPadding="false"
                 android:paddingHorizontal="38dp"
                 android:text="@string/complete"
-                android:textColor="@color/white"
+                android:textColor="@color/general_theme_white"
                 android:textSize="16sp"
-                app:backgroundTint="@color/white"
+                app:backgroundTint="@color/general_theme_white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
