--- a/app/src/main/res/layout/activity_terms_promote.xml
+++ b/app/src/main/res/layout/activity_terms_promote.xml
@@ -37,7 +37,7 @@
         android:fontFamily="@font/noto_sans_kr_bold"
         android:gravity="center"
         android:text="@string/promote_terms"
-        android:textColor="@color/black"
+        android:textColor="@color/general_theme_black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,7 +51,7 @@
         android:fontFamily="@font/noto_sans_kr_bold"
         android:lineSpacingExtra="2sp"
         android:text="@string/promote_terms_detail"
-        android:textColor="@color/black"
+        android:textColor="@color/general_theme_black"
         android:textSize="8sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
