--- a/app/src/main/res/drawable/box_error_text.xml
+++ b/app/src/main/res/drawable/box_error_text.xml
@@ -17,7 +17,7 @@
         <path
             android:pathData="M12 0H321C327.627 0 333 5.37258 333 12V36C333 42.6274 327.627 48 321 48H12C5.37258 48 0 42.6274 0 36V12C0 5.37258 5.37258 0 12 0Z"
             android:strokeWidth="3"
-            android:strokeColor="@color/general_theme_error"
+            android:strokeColor="@color/general_theme_red"
             />
     </group>
 </vector>
