--- a/app/src/main/res/drawable/switch_track_off.xml
+++ b/app/src/main/res/drawable/switch_track_off.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#d9d9d9" />
+    <solid android:color="@color/system_theme_lightgray" />
     <corners android:radius="15dp" />
     <size android:width="52dp"
         android:height="30dp" />
