--- a/app/src/main/res/layout/activity_join_part2.xml
+++ b/app/src/main/res/layout/activity_join_part2.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/join_membership"
-        android:textColor="@color/black"
+        android:textColor="@color/general_theme_black"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,7 +48,7 @@
         android:layout_marginTop="140dp"
         android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/send_certification_code"
-        android:textColor="@color/black"
+        android:textColor="@color/general_theme_black"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@id/textview_join_membership"
         app:layout_constraintTop_toBottomOf="@id/textview_join_membership" />
@@ -60,7 +60,7 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/box_input_text"
         android:padding="15dp"
-        android:textColor="@color/black"
+        android:textColor="@color/general_theme_black"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@id/textview_send_certification"
         app:layout_constraintTop_toBottomOf="@id/textview_send_certification" />
@@ -84,7 +84,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/error_code"
-        android:textColor="@color/general_theme_error"
+        android:textColor="@color/general_theme_red"
         android:textSize="12sp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@id/edittext_certification_code"
@@ -96,7 +96,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/run_out_code"
-        android:textColor="@color/general_theme_error"
+        android:textColor="@color/general_theme_red"
         android:textSize="12sp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@id/edittext_certification_code"
@@ -109,7 +109,7 @@
         android:layout_marginTop="50dp"
         android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/certification_code_problem"
-        android:textColor="@color/general_theme_error"
+        android:textColor="@color/general_theme_red"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="@id/edittext_certification_code"
         app:layout_constraintStart_toStartOf="@id/edittext_certification_code"
@@ -122,7 +122,7 @@
         android:layout_marginEnd="19dp"
         android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/timer"
-        android:textColor="@color/black"
+        android:textColor="@color/general_theme_black"
         android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="@id/edittext_certification_code"
         app:layout_constraintEnd_toEndOf="@id/edittext_certification_code"
