--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+    android:background="@color/general_theme_black"
     tools:context=".ui.login.LandingActivity">
 
     <LinearLayout
@@ -25,7 +25,7 @@
             android:fontFamily="@font/noto_sans_kr_bold"
             android:includeFontPadding="false"
             android:text="@string/text_welcome1"
-            android:textColor="@color/white"
+            android:textColor="@color/general_theme_white"
             android:textFontWeight="700"
             android:textSize="38sp"
             tools:ignore="HardcodedText" />
@@ -37,7 +37,7 @@
             android:fontFamily="@font/noto_sans_kr_bold"
             android:includeFontPadding="false"
             android:text="@string/text_welcome2"
-            android:textColor="@color/white"
+            android:textColor="@color/general_theme_white"
             android:textFontWeight="700"
             android:textSize="14sp" />
 
@@ -50,7 +50,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="110dp"
         android:background="@drawable/bg_rectangle_round"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="@color/general_theme_white"
         android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/sign_up"
         android:textColor="@color/main_theme_blue"
@@ -91,7 +91,7 @@
         android:fontFamily="@font/noto_sans_kr_bold"
         android:includeFontPadding="false"
         android:text="@string/text_welcome3"
-        android:textColor="@color/white"
+        android:textColor="@color/general_theme_white"
         android:textFontWeight="700"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
