--- a/app/src/main/res/layout/activity_problem_yn.xml
+++ b/app/src/main/res/layout/activity_problem_yn.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/noto_sans_kr_medium"
         android:includeFontPadding="false"
-        android:textColor="@color/main_theme_gray"
+        android:textColor="@color/system_theme_gray"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@id/imagebutton_back"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,7 +38,7 @@
         android:fontFamily="@font/noto_sans_kr_medium"
         android:includeFontPadding="false"
         android:textAlignment="center"
-        android:textColor="@color/white"
+        android:textColor="@color/general_theme_white"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@id/group_button"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,7 +64,7 @@
             android:layout_height="470dp"
             android:layout_marginHorizontal="20dp"
             android:background="@drawable/bg_rectangle_round"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/general_theme_white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -94,7 +94,7 @@
                     android:fontFamily="@font/noto_sans_kr_bold"
                     android:includeFontPadding="false"
                     android:text="@string/yes"
-                    android:textColor="@color/black"
+                    android:textColor="@color/general_theme_black"
                     android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -121,7 +121,7 @@
                 android:id="@+id/true_divider"
                 android:layout_width="60dp"
                 android:layout_height="1dp"
-                android:background="@color/main_theme_gray"
+                android:background="@color/system_theme_gray"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -143,7 +143,7 @@
                     android:fontFamily="@font/noto_sans_kr_regular"
                     android:includeFontPadding="false"
                     android:textAlignment="center"
-                    android:textColor="@color/main_theme_gray"
+                    android:textColor="@color/system_theme_gray"
                     android:textSize="11sp"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:text="AB_true_content_1" />
@@ -156,7 +156,7 @@
                     android:fontFamily="@font/noto_sans_kr_regular"
                     android:includeFontPadding="false"
                     android:textAlignment="center"
-                    android:textColor="@color/main_theme_gray"
+                    android:textColor="@color/system_theme_gray"
                     android:textSize="11sp"
                     app:layout_constraintTop_toBottomOf="@id/true_content_1"
                     tools:text="AB_true_content_2" />
@@ -169,7 +169,7 @@
                     android:fontFamily="@font/noto_sans_kr_regular"
                     android:includeFontPadding="false"
                     android:textAlignment="center"
-                    android:textColor="@color/main_theme_gray"
+                    android:textColor="@color/system_theme_gray"
                     android:textSize="11sp"
                     app:layout_constraintTop_toBottomOf="@id/true_content_2"
                     tools:text="AB_true_content_3" />
@@ -186,7 +186,7 @@
             android:layout_height="470dp"
             android:layout_marginHorizontal="20dp"
             android:background="@drawable/bg_rectangle_round"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/general_theme_white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/button_y"
             app:layout_constraintTop_toTopOf="parent">
@@ -217,7 +217,7 @@
                     android:fontFamily="@font/noto_sans_kr_bold"
                     android:includeFontPadding="false"
                     android:text="@string/no"
-                    android:textColor="@color/black"
+                    android:textColor="@color/general_theme_black"
                     android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -244,7 +244,7 @@
                 android:id="@+id/false_divider"
                 android:layout_width="60dp"
                 android:layout_height="1dp"
-                android:background="@color/main_theme_gray"
+                android:background="@color/system_theme_gray"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -266,7 +266,7 @@
                     android:fontFamily="@font/noto_sans_kr_regular"
                     android:includeFontPadding="false"
                     android:textAlignment="center"
-                    android:textColor="@color/main_theme_gray"
+                    android:textColor="@color/system_theme_gray"
                     android:textSize="11sp"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:text="AB_false_content_1" />
@@ -279,7 +279,7 @@
                     android:fontFamily="@font/noto_sans_kr_regular"
                     android:includeFontPadding="false"
                     android:textAlignment="center"
-                    android:textColor="@color/main_theme_gray"
+                    android:textColor="@color/system_theme_gray"
                     android:textSize="11sp"
                     app:layout_constraintTop_toBottomOf="@id/false_content_1"
                     tools:text="AB_false_content_2" />
@@ -292,7 +292,7 @@
                     android:fontFamily="@font/noto_sans_kr_regular"
                     android:includeFontPadding="false"
                     android:textAlignment="center"
-                    android:textColor="@color/main_theme_gray"
+                    android:textColor="@color/system_theme_gray"
                     android:textSize="11sp"
                     app:layout_constraintTop_toBottomOf="@id/false_content_2"
                     tools:text="AB_false_content_3" />
