--- a/app/src/main/res/layout/activity_settings_alert.xml
+++ b/app/src/main/res/layout/activity_settings_alert.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:gravity="top"
         android:text="@string/alert_setting"
-        android:textColor="@color/black"
+        android:textColor="@color/general_theme_black"
         android:textSize="16sp"
         android:fontFamily="@font/noto_sans_kr_bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -44,7 +44,7 @@
         android:layout_marginTop="49.5dp"
         android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/event_push_alert"
-        android:textColor="@color/black"
+        android:textColor="@color/general_theme_black"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textview_alertSetting" />
@@ -79,7 +79,7 @@
         android:layout_marginTop="55dp"
         android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/night_time_alert"
-        android:textColor="@color/black"
+        android:textColor="@color/general_theme_black"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@id/textview_eventPushAlertAdditional"
         app:layout_constraintTop_toBottomOf="@id/textview_eventPushAlertAdditional" />
