--- a/app/src/main/res/layout/activity_settings_profile.xml
+++ b/app/src/main/res/layout/activity_settings_profile.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/profile_settings"
-        android:textColor="@color/black"
+        android:textColor="@color/general_theme_black"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,16 +49,17 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:background="@drawable/ic_circle_full"
-            android:backgroundTint="@color/black" />
+            android:backgroundTint="@color/general_theme_black" />
 
         <ImageView
             android:id="@+id/imageview_checkPoint"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/general_theme_white"
             app:srcCompat="@drawable/ic_check" />
     </FrameLayout>
 
+    <!-- Todo: 외곽 stroke(system_theme_lightgray) 작업 필요, image clip 작업 필요 -->
     <ImageView
         android:id="@+id/imageview_profile"
         android:layout_width="wrap_content"
@@ -91,7 +92,7 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:background="@drawable/ic_plus"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/general_theme_white"
             android:contentDescription="@string/blank_text" />
     </FrameLayout>
 
@@ -113,7 +114,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/noto_sans_kr_bold"
             android:text="@string/input_nikname"
-            android:textColor="@color/black"
+            android:textColor="@color/general_theme_black"
             android:textSize="14sp" />
 
         <View
@@ -133,7 +134,7 @@
             android:fontFamily="@font/noto_sans_kr_bold"
             android:hint="@string/user_name"
             android:inputType="textPersonName"
-            android:textColor="@color/black"
+            android:textColor="@color/general_theme_black"
             android:textSize="14sp" />
 
         <FrameLayout
@@ -158,7 +159,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/overlap_nikname"
-        android:textColor="@color/general_theme_error"
+        android:textColor="@color/general_theme_red"
         android:textSize="10sp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@id/layout_nikname"
@@ -182,7 +183,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/noto_sans_kr_bold"
             android:text="@string/input_email"
-            android:textColor="@color/black"
+            android:textColor="@color/general_theme_black"
             android:textSize="14sp" />
 
         <View
@@ -202,7 +203,7 @@
             android:fontFamily="@font/noto_sans_kr_bold"
             android:hint="@string/user_email"
             android:inputType="textEmailAddress"
-            android:textColor="@color/black"
+            android:textColor="@color/general_theme_black"
             android:textSize="14sp" />
     </LinearLayout>
 
@@ -214,11 +215,11 @@
         android:background="@drawable/bg_rectangle_round"
         android:backgroundTint="@color/main_theme_subblue"
         android:drawableEnd="@drawable/ic_front"
-        android:drawableTint="@color/white"
+        android:drawableTint="@color/general_theme_white"
         android:fontFamily="@font/noto_sans_kr_bold"
         android:padding="5dp"
         android:text="@string/password_reset"
-        android:textColor="@color/white"
+        android:textColor="@color/general_theme_white"
         app:layout_constraintEnd_toEndOf="@id/layout_email"
         app:layout_constraintStart_toStartOf="@id/layout_email"
         app:layout_constraintTop_toBottomOf="@id/layout_email" />
