--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -12,7 +12,7 @@
         android:layout_width="318dp"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_rectangle_round"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="@color/general_theme_white"
         android:text="@string/start"
         android:textColor="@color/main_theme_blue"
         android:textSize="18sp"
