--- a/app/src/main/res/layout/activity_terms_use.xml
+++ b/app/src/main/res/layout/activity_terms_use.xml
@@ -42,7 +42,7 @@
             android:fontFamily="@font/noto_sans_kr_bold"
             android:gravity="center"
             android:text="@string/use_terms"
-            android:textColor="@color/black"
+            android:textColor="@color/general_theme_black"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +55,7 @@
             android:fontFamily="@font/noto_sans_kr_bold"
             android:gravity="center"
             android:text="@string/personal_info_terms"
-            android:textColor="@color/black"
+            android:textColor="@color/general_theme_black"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -70,7 +70,7 @@
             android:fontFamily="@font/noto_sans_kr_bold"
             android:lineSpacingExtra="2sp"
             android:text="@string/use_terms_detail"
-            android:textColor="@color/black"
+            android:textColor="@color/general_theme_black"
             android:textSize="8sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
