--- a/app/src/main/res/layout/dialog_agree_terms.xml
+++ b/app/src/main/res/layout/dialog_agree_terms.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="30dp"
         android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/agree_terms"
-        android:textColor="@color/black"
+        android:textColor="@color/general_theme_black"
         android:textSize="17sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:background="@drawable/bg_rectangle_round"
-        android:backgroundTint="#E7E7E7"
+        android:backgroundTint="@color/system_theme_subwhite"
         app:layout_constraintEnd_toEndOf="@id/button_agree_terms"
         app:layout_constraintStart_toStartOf="@id/textview_agree_terms"
         app:layout_constraintTop_toBottomOf="@id/textview_agree_terms">
@@ -49,7 +49,7 @@
             android:paddingStart="18.5dp"
             android:paddingEnd="0dp"
             android:text="@string/service_use_terms"
-            android:textColor="@color/black"
+            android:textColor="@color/general_theme_black"
             android:textSize="12sp"
             app:layout_constraintEnd_toStartOf="@id/button_use_terms"
             app:layout_constraintStart_toStartOf="parent"
@@ -74,7 +74,7 @@
             android:paddingStart="18.5dp"
             android:paddingEnd="0dp"
             android:text="@string/service_promote_terms"
-            android:textColor="@color/black"
+            android:textColor="@color/general_theme_black"
             android:textSize="12sp"
             app:layout_constraintEnd_toStartOf="@id/button_promote_terms"
             app:layout_constraintStart_toStartOf="parent"
