--- a/app/src/main/res/layout/dialog_email.xml
+++ b/app/src/main/res/layout/dialog_email.xml
@@ -14,7 +14,7 @@
         android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/certification_code_resend"
         android:textAlignment="center"
-        android:textColor="@color/black"
+        android:textColor="@color/general_theme_black"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,7 +28,7 @@
         android:layout_marginTop="20dp"
         android:fontFamily="@font/noto_sans_kr_bold"
         android:text="@string/email_reconfirm"
-        android:textColor="@color/black"
+        android:textColor="@color/general_theme_black"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
