--- a/app/src/main/res/layout/activity_settings_profile.xml
+++ b/app/src/main/res/layout/activity_settings_profile.xml
@@ -101,7 +101,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="43dp"
-        android:background="@drawable/box_white"
+        android:background="@drawable/textbox_state_normal"
         android:orientation="horizontal"
         android:padding="15dp"
         app:layout_constraintEnd_toEndOf="@id/imageview_profile"
@@ -170,7 +170,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:background="@drawable/box_white"
+        android:background="@drawable/textbox_state_normal"
         android:orientation="horizontal"
         android:padding="15dp"
         app:layout_constraintEnd_toEndOf="@id/layout_nikname"
