--- a/app/src/main/res/layout/activity_join_part3.xml
+++ b/app/src/main/res/layout/activity_join_part3.xml
@@ -55,15 +55,16 @@
 
     <EditText
         android:id="@+id/edittext_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:background="@drawable/box_white"
+        android:background="@drawable/textbox_state_normal"
         android:hint="@string/user_name"
         android:padding="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textview_join_user_name" />
+        app:layout_constraintTop_toBottomOf="@id/textview_join_user_name"
+        app:layout_constraintWidth_percent="0.91" />
 
     <TextView
         android:id="@+id/textview_overlap_name"
@@ -103,15 +104,15 @@
 
     <EditText
         android:id="@+id/edittext_password"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:background="@drawable/box_white"
+        android:background="@drawable/textbox_state_normal"
         android:hint="@string/pw"
         android:orientation="horizontal"
         android:padding="15dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/edittext_name"
+        app:layout_constraintStart_toStartOf="@id/edittext_name"
         app:layout_constraintTop_toBottomOf="@id/textview_join_user_password" />
 
     <TextView
@@ -154,10 +155,10 @@
 
     <EditText
         android:id="@+id/edittext_password_check"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
-        android:background="@drawable/box_white"
+        android:background="@drawable/textbox_state_normal"
         android:hint="@string/password_check"
         android:padding="15dp"
         app:layout_constraintEnd_toEndOf="@id/edittext_password"
